--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"pocketbase": "^0.26.0",
 		"svelte-routing": "^2.13.0"
 	}
 }
